tests/NormalTests/paczka1/small_fuzzy/55644791.err
Error in line 3: k2K9F7eASTK A450 67,95
Error in line 9: ywDm S166 30,6
